<resources>
    <string name="app_name">WalkGraph</string>
    <string name="splash_bottom_text">Walk Graph, Helping you keep track of your movement</string>
    <string name="walk_graph_logo">Walk Graph Logo</string>
    <string name="no_graphs">No Graphs Recorded Yet</string>

    <string name="start_time_title">Set Location Polling Start Time</string>
    <string name="current_start_time">Current Start Time</string>
    <string name="stop_time_title">Set Location Polling Stop Time</string>
    <string name="current_stop_time">Current Stop Time</string>
    <string name="graph_keep_days_title">Number of days to keep Graph</string>
    <string name="animate_graph_title">Animate Graph on Start Up?</string>
    <string name="graph_date">Graph\'s Date: %s</string>
    <string name="graph_locations">Number of Graph\'s Locations: %s</string>
    <string name="title_notification_time">Set Notification Time</string>
    <string name="map">Map</string>
    <string name="list">Graph List</string>
    <string name="settings">Settings</string>
    <string name="polling_interval_title">Set Polling Interval</string>
    <string name="current_notification_time">Current Notification Time</string>
    <string name="current_polling_interval">Current Polling interval</string>
    <string name="return_to_list">Return To List</string>

    <!--App Settings Strings-->
    <string name="key_animate_graph">animate_graph_key</string>
    <string name="animate_graph_summary">Movement from points on graph will be animated</string>
    <string name="key_polling_interval">polling interval key</string>
    <string name="key_graph_keep">graph keep key</string>
    <string name="def_value_list_pref">0</string>
    <string name="key_start_polling">start polling key</string>
    <string name="start_time_summary">Select time to start saving location</string>
    <string name="key_stop_polling">stop polling key</string>
    <string name="stop_time_summary">Select time to Stop saving location</string>
    <string name="key_notification_time">notification time key</string>
    <string name="summary_notification_time">Select notification time</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_about">About</string>
    <string name="pref_about_summary">WalkGraph. An App to Keep track of your locations.</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_version_number">1.0</string>
    <string name="intent_git_title">Code</string>
    <string name="intent_git_summary">View App Source Code</string>
    <string name="start_time_def_value">1510130474904</string>
    <string name="stop_time_def_value">1510166552282</string>
    <string name="notification_time_def_value">1510177437315</string>
</resources>
